syntax = "proto3";

package proto;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

service Password {
    rpc PasswordCreate (PasswordCreateRequest) returns (PasswordCreateResponse) {}
    rpc PasswordUpdate (PasswordUpdateRequest) returns (PasswordUpdateResponse) {}
    rpc PasswordDelete (PasswordDeleteRequest) returns (PasswordDeleteResponse) {}
    rpc PasswordValidate (PasswordValidateRequest) returns (PasswordValidateResponse) {}
}

enum PasswordHashType {
    ARGON2 = 0;
    BCRYPT = 1;
}

message PasswordCreateRequest {
    PasswordHashType type = 1;
    string plainPassword = 2;
}

message PasswordCreateResponse {
    bool success = 1;
    string id = 2;
}

message PasswordUpdateRequest {
    string id = 1;
    string oldPlainPassword = 2;
    string newPlainPassword = 3;
}

message PasswordUpdateResponse {
    bool success = 1;
    string id = 2;
}

message PasswordDeleteRequest {
    string id = 1;
}

message PasswordDeleteResponse {
    bool success = 1;
}

message PasswordValidateRequest {
    string id = 1;
    string plainPassword = 2;
}

message PasswordValidateResponse {
    bool success = 1;
    string id = 2;
}